@@ -1,3 +1,8 @@
+2004-05-16  Sam Steingold  <sds@gnu.org>
+
+	* modules/berkeley-db/bdb.c (BDB:ENV-CREATE): 4.2 uses
+	DB_RPCCLIENT while 4.1 used DB_CLIENT
+
 2004-05-16  Bruno Haible  <bruno@clisp.org>
 
 	* genclisph.d (main) [TYPECODES && HAVE_SMALL_SSTRING]: Fix the
